@@ -41,7 +41,7 @@ instance must be running, where "ftw.upgrade" is available and the \
 
 {t.bold}ZOPE INSTANCE DISCOVERY:{t.normal}
     The Zope instance is discovered automatically by searching for all \
-"zope.conf" files in "parts/instance*" of the buildout directory, looking up \
+"parts/*/etc/zope.conf" files in the buildout directory, looking up \
 the instance port and testing whether the port is bound on localhost.
 If multiple instances are running, the first one running is used.
 
